2003-2-07   Andrew H. Chatham <pyogg@andrewchatham.com>
	* Applied another patch from Nicodemus to fix things windows. Pass
	the "b" flag to all file open commands.
	
2003-1-18   Andrew H. Chatham <pyogg@andrewchatham.com>
	* Applied a patch from Nicodemus <nicodemus@globalite.com.br> to 
	get this to build on windows.
	
2002-09-24  Andrew H. Chatham <pyogg@andrewchatham.com>
	* Changes from Neil Blakey-Milner
	* setup.py - fixed regular expression
	* pyvorbisfile.c: Used more portable endian-test code.
	
2002-09-12  Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisinfo.c: (assign_tag) Removed a printf I accidentally
	left in there.
	
2002-09-12  Andrew H. Chatham <pyogg@andrewchatham.com>
	* setup.py: Bumped to version 1.1 (may not release until I verify
	another bug report)

	
	* pyvorbisinfo.c: (py_comment_new_empty) Made static and fixed the
	case when using unicode strings with VorbisComment. Also now
	capitalize the key for comments.
	
	* pyvorbisfile.c: Added patch so that passing in PyFile objects to
	a VorbisFile object won't _necessarily_ crash and burn, though
	it's still not a good idea. A much better way of doing this is the
	next planned feature.
	
2002-07-23  Andrew H. Chatham <andrew@andrewchatham.com>
	* README - documented new comment interface
	* Bumped to 1.0 to match Vorbis
	* pyvorbisinfo.c: Removed printf

2002-07-16  Andrew H. Chatham <andrew@andrewchatham.com>
	* pyvorbisinfo.c: Can now create comments from dictionaries 
	(a MUCH better interface)
	* vorbismodule.h: Removed unneeded declarations

2002-05-21  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbisinfo.c: Don't crash if comments are not valid UTF-8

	* vorbismodule.c: Include some more headers
	
2002-02-17  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbisfile.c: (py_ov_open): Fixed fd leak pointed out by
	Harald Meland. Also correctly incref file objects passed in to
	keep them open.

	* vorbismodule.c, pyvorbisfile.c, pyvorbiscodec.c, pyvorbisinfo.c: